04-FLEXBOX-SYSTEM-FONT

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
 
 	<div class="app">
-
+		<p>
+			Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non, quidem modi! Ratione facere incidunt consectetur
+			nesciunt tempora eligendi, quos voluptatum laudantium culpa. Omnis modi sint debitis veritatis. Velit, modi ex!
+		</p>
 	</div>
 
 </body>
