05-FLEXBOX-CONTENT-SIDEBAR

--- a/index.html
+++ b/index.html
@@ -4,18 +4,28 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Reminders 🪦 Remake</title>
 	<link rel="stylesheet" href="./css/normalize.css">
 	<link rel="stylesheet" href="./css/app.css">
-	<title>Reminders 🪦 Remake</title>
+	<link rel="stylesheet" href="./css/sidebar.css">
+	<link rel="stylesheet" href="./css/content.css">
 </head>
 
 <body>
 
 	<div class="app">
-		<p>
-			Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non, quidem modi! Ratione facere incidunt consectetur
-			nesciunt tempora eligendi, quos voluptatum laudantium culpa. Omnis modi sint debitis veritatis. Velit, modi ex!
-		</p>
+
+		<aside>
+			ja som vlavo
+		</aside>
+
+		<main>
+			<p>
+				Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non, quidem modi! Ratione facere incidunt consectetur
+				nesciunt tempora eligendi, quos voluptatum laudantium culpa. Omnis modi sint debitis veritatis. Velit, modi ex!
+			</p>
+		</main>
+
 	</div>
 
 </body>
