--- a/index.html
+++ b/index.html
@@ -16,7 +16,21 @@
 	<div class="app">
 
 		<aside>
-			ja som vlavo
+
+			<header class="controls">
+				<button class="close"></button>
+				<button class="minimize"></button>
+				<button class="maximize"></button>
+			</header>
+
+			<form></form>
+
+			<nav></nav>
+
+			<ul>
+				<li></li>
+			</ul>
+
 		</aside>
 
 		<main>
