08-FORM-INPUT-PSEUDO-EL

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 				<button class="maximize"></button>
 			</header>
 
-			<form></form>
+			<form>
+				<input type="text" placeholder="Search">
+			</form>
 
 			<nav></nav>
 
