09-BUTTON-POSITION-RELATIVE

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 		</aside>
 
 		<main>
+			<header class="add-new">
+				<button>+</button>
+			</header>
+
 			<p>
 				Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non, quidem modi! Ratione facere incidunt consectetur
 				nesciunt tempora eligendi, quos voluptatum laudantium culpa. Omnis modi sint debitis veritatis. Velit, modi ex!
