10-CSS-GRID-FRACTION-GAP

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
 				<input type="text" placeholder="Search">
 			</form>
 
-			<nav></nav>
+			<nav>
+				<a href="#" class="today">Today</a>
+				<a href="#" class="scheduled">Scheduled</a>
+				<a href="#" class="all">All</a>
+				<a href="#" class="flagged">Flagged</a>
+			</nav>
 
 			<ul>
 				<li></li>
