12-NADPISY-ZAROVNAJME-SA

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
 				<button>+</button>
 			</header>
 
+			<div class="title">
+				<h1 class="today">Today</h1>
+				<h1 class="scheduled">Scheduled</h1>
+				<h1 class="all">All</h1>
+				<h1 class="flagged">Flagged</h1>
+			</div>
+
 			<p>
 				Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non, quidem modi! Ratione facere incidunt consectetur
 				nesciunt tempora eligendi, quos voluptatum laudantium culpa. Omnis modi sint debitis veritatis. Velit, modi ex!
