15-VEKTOR-VS-RASTER-IMG

--- a/index.html
+++ b/index.html
@@ -54,10 +54,30 @@
 				<h1 class="flagged">Flagged</h1>
 			</div>
 
-			<p>
-				Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non, quidem modi! Ratione facere incidunt consectetur
-				nesciunt tempora eligendi, quos voluptatum laudantium culpa. Omnis modi sint debitis veritatis. Velit, modi ex!
-			</p>
+			<ol class="todos">
+				<li>
+					<svg>
+
+					</svg>
+					<p>IG stories</p>
+				</li>
+				<li>
+					<p>
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae molestiae, repellat sed molestias
+						laborum consectetur facere quidem dicta at voluptatem. Doloribus fugit odio quisquam animi pariatur facilis
+						hic optio veniam!
+					</p>
+				</li>
+				<li>
+					<p>LEGO video</p>
+				</li>
+				<li>
+					<p>pripravit stuff na ten dalsi stuff (dark mode?)</p>
+				</li>
+				<li>
+					<p>precistit disky</p>
+				</li>
+			</ol>
 		</main>
 
 	</div>
