--- a/index.html
+++ b/index.html
@@ -57,11 +57,14 @@
 			<ol class="todos">
 				<li>
 					<svg>
-
+						<circle cx="13" cy="14" r="11"></circle>
 					</svg>
 					<p>IG stories</p>
 				</li>
 				<li>
+					<svg>
+						<circle cx="13" cy="14" r="11"></circle>
+					</svg>
 					<p>
 						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae molestiae, repellat sed molestias
 						laborum consectetur facere quidem dicta at voluptatem. Doloribus fugit odio quisquam animi pariatur facilis
@@ -69,12 +72,21 @@
 					</p>
 				</li>
 				<li>
+					<svg>
+						<circle cx="13" cy="14" r="11"></circle>
+					</svg>
 					<p>LEGO video</p>
 				</li>
 				<li>
+					<svg>
+						<circle cx="13" cy="14" r="11"></circle>
+					</svg>
 					<p>pripravit stuff na ten dalsi stuff (dark mode?)</p>
 				</li>
 				<li>
+					<svg>
+						<circle cx="13" cy="14" r="11"></circle>
+					</svg>
 					<p>precistit disky</p>
 				</li>
 			</ol>
